--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,12 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# Build outputs
+web/build/
+backend/dist/
+ai-agent/dist/
+
+# SQLite
+*.db
+*.sqlite
