add: AI agent backend

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,11 @@ services:
   backend:
     build: ./backend
     ports:
-      - "3000:3000"
+      - "3002:3002"
     env_file: .env
+    environment:
+      - PORT=3002
+      - AI_AGENT_URL=http://ai-agent:3001
     volumes:
       - ./web/build:/app/public
     depends_on:
@@ -15,4 +18,6 @@ services:
     expose:
       - "3001"
     env_file: .env
+    environment:
+      - AI_AGENT_PORT=3001
     restart: unless-stopped
