--- a/ai-agent/Dockerfile
+++ b/ai-agent/Dockerfile
@@ -1,9 +1,11 @@
 FROM node:22-alpine
 
+RUN corepack enable && corepack prepare pnpm@latest --activate
+
 WORKDIR /app
 
-COPY package*.json ./
-RUN npm ci --omit=dev
+COPY package.json pnpm-lock.yaml* ./
+RUN pnpm install --prod --frozen-lockfile 2>/dev/null || pnpm install --prod
 
 COPY dist/ ./dist/
 
