--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,15 +1,17 @@
 FROM node:22-alpine
 
+RUN corepack enable && corepack prepare pnpm@latest --activate
+
 WORKDIR /app
 
-COPY package*.json ./
-RUN npm ci --omit=dev
+COPY package.json pnpm-lock.yaml* ./
+RUN pnpm install --prod --frozen-lockfile 2>/dev/null || pnpm install --prod
 
 COPY dist/ ./dist/
 
 ENV NODE_ENV=production
-ENV PORT=3000
+ENV PORT=3002
 
-EXPOSE 3000
+EXPOSE 3002
 
 CMD ["node", "dist/index.js"]
