add: siwe authentication

--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,8 @@
     "drizzle-orm": "^0.38.4",
     "express": "^5.1.0",
     "socket.io": "^4.8.1",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "viem": "^2.46.2"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.12",
