update: project name from proxyGov to TwinGovernance

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 #Database 
 DB_DRIVER=sqlite
-# DATABASE_URL=postgresql://user:pass@localhost:5432/proxygov
+# DATABASE_URL=postgresql://user:pass@localhost:5432/twingovernance
 
 #Backend 
 PORT=3002
