--- a/ai-agent/package.json
+++ b/ai-agent/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "proxygov-ai-agent",
+  "name": "twingovernance-ai-agent",
   "version": "0.1.0",
   "private": true,
   "type": "module",
