--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "proxygov-backend",
+  "name": "twingovernance-backend",
   "version": "0.1.0",
   "private": true,
   "type": "module",
