fix: swap command flow and added daobalance command

--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@ ANTHROPIC_API_KEY=sk-ant-xxxxx
 
 #Uniswap 
 UNISWAP_API_KEY=
-UNISWAP_API_URL=https://trading-api-labs.interface.gateway.uniswap.org/v1
+UNISWAP_API_URL=https://trade-api.gateway.uniswap.org/v1
 
 #DAO Wallet
 DAO_WALLET_ADDRESS=0x0000000000000000000000000000000000000000
@@ -21,3 +21,8 @@ DAO_WALLET_PRIVATE_KEY=0x0000000000000000000000000000000000000000000000000000000
 #Chain
 CHAIN_ID=11155111
 # CHAIN_ID=1
+
+#Dev Auth (skip MetaMask + SIWE in development)
+SKIP_AUTH=true
+VITE_SKIP_AUTH=true
+VITE_DEV_ADDRESS=0x7192C4954f420381b08b5622D226c427A8FCdA4E
