--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -6,13 +6,13 @@
     "esModuleInterop": true,
     "strict": true,
     "outDir": "dist",
-    "rootDir": "src",
-    "declaration": true,
+    "rootDir": "..",
+    "declaration": false,
     "sourceMap": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "../shared/**/*"],
   "exclude": ["node_modules", "dist"]
 }
