fix:  build step for db

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,11 +1,13 @@
 FROM node:22-alpine
 
+RUN apk add --no-cache python3 make g++
 RUN corepack enable && corepack prepare pnpm@latest --activate
 
 WORKDIR /app
 
 COPY package.json pnpm-lock.yaml* ./
 RUN pnpm install --prod --frozen-lockfile 2>/dev/null || pnpm install --prod
+RUN pnpm rebuild better-sqlite3
 
 COPY dist/ ./dist/
 
