update: build script

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build:agent": "pnpm --filter twingovernance-ai-agent build",
     "install:all": "pnpm install",
     "docker:up": "pnpm build:web && docker compose up -d --build",
+    "docker:deploy": "pnpm build:backend && pnpm build:agent && pnpm build:web && docker compose down && docker compose build --no-cache && docker compose up -d",
     "docker:down": "docker compose down"
   },
   "devDependencies": {
