fix: prod build

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,8 +6,7 @@ RUN corepack enable && corepack prepare pnpm@latest --activate
 WORKDIR /app
 
 COPY package.json pnpm-lock.yaml* ./
-RUN pnpm install --prod --frozen-lockfile 2>/dev/null || pnpm install --prod
-RUN pnpm rebuild better-sqlite3
+RUN pnpm install --frozen-lockfile 2>/dev/null || pnpm install
 
 COPY dist/ ./dist/
 
