debug: for build process on vps

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,7 +6,12 @@ RUN corepack enable && corepack prepare pnpm@latest --activate
 WORKDIR /app
 
 COPY package.json pnpm-lock.yaml* ./
-RUN pnpm install --frozen-lockfile 2>/dev/null || pnpm install
+RUN echo "onlyBuiltDependencies:" > .npmrc || true
+RUN pnpm install --config.onlyBuiltDependencies="better-sqlite3" --frozen-lockfile 2>/dev/null || pnpm install --config.onlyBuiltDependencies="better-sqlite3"
+RUN ls -la node_modules/.pnpm/better-sqlite3*/node_modules/better-sqlite3/build/ 2>/dev/null || echo "NO BUILD DIR FOUND"
+RUN npx --yes node-gyp rebuild --directory=node_modules/.pnpm/better-sqlite3@11.10.0/node_modules/better-sqlite3 2>&1 || true
+RUN pnpm rebuild better-sqlite3 2>&1 || true
+RUN ls -la node_modules/.pnpm/better-sqlite3*/node_modules/better-sqlite3/build/Release/ 2>/dev/null || echo "STILL NO .node FILE"
 
 COPY dist/ ./dist/
 
